--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,8 @@ server.port=8080
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 spring.messages.basename=message
-spring.messages.fallback-to-system-locale=false
+server.error.whitelabel.enabled=false
+server.error.path=/error
 # ===============================
 # DATABASE
 # ===============================
