--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ server.error.path=/error
 # DATABASE
 # ===============================
 spring.datasource.driver-class-name= org.h2.Driver
-spring.datasource.url=jdbc:h2:file:./../database/citiesDB
+spring.datasource.url=jdbc:h2:file:./database/citiesDB
 spring.datasource.username=user
 spring.datasource.password=pass
 # ===============================
