--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -1,1 +1,56 @@
-bot.name=AdvisorForTripBot
+###################################
+#titles
+###################################
+main.page=Главная страница
+bot.name=Advisor For Trip Bot
+all.countries=Все страны
+all.cities=Все города
+new.country=Новая страна
+new.city=Новый город
+###################################
+#headers
+###################################
+add.country=Добавить страну
+add.city=Добавить город
+edit.city=Редактировать город
+edit.country=Редактировать страну
+###################################
+#strings
+###################################
+country=Страна
+countries=Страны
+city=Город
+capital=Столица
+cities=Города
+currency=Валюта
+id=№
+name=Название
+true=Дa
+false=Нет
+description=Описание
+abbreviation=Сокращение
+action=Действие
+is.capital=Является столицей
+###################################
+#buttons
+###################################
+main.page.button=На главную
+edit.button=Редактировать
+add.button=Добавить
+delete.button=Удалить
+###################################
+#errors
+###################################
+name.error=Введите имя
+name.unique.error=Есть город с таким именем
+description.error=Введите описание
+error=Ошибка...Упс
+###################################
+#footer
+###################################
+name.full=Serov Nikita Vadimovich
+name.br=Mikita Serou
+github=MikitaSerou
+mail=Mikita.Serou@gmail.com
+phone=+375(29)105-16-07
+telegram=@MikitaSerou
