--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -1,50 +1,52 @@
 ###################################
 #titles
 ###################################
-main.page=Главная страница
+main.page=Р“Р»Р°РІРЅР°СЏ СЃС‚СЂР°РЅРёС†Р°
 bot.name=Advisor For Trip Bot
-all.countries=Все страны
-all.cities=Все города
-new.country=Новая страна
-new.city=Новый город
+all.countries=Р’СЃРµ СЃС‚СЂР°РЅС‹
+all.cities=Р’СЃРµ РіРѕСЂРѕРґР°
+new.country=РќРѕРІР°СЏ СЃС‚СЂР°РЅР°
+new.city=РќРѕРІС‹Р№ РіРѕСЂРѕРґ
 ###################################
 #headers
 ###################################
-add.country=Добавить страну
-add.city=Добавить город
-edit.city=Редактировать город
-edit.country=Редактировать страну
+add.country=Р”РѕР±Р°РІРёС‚СЊ СЃС‚СЂР°РЅСѓ
+add.city=Р”РѕР±Р°РІРёС‚СЊ РіРѕСЂРѕРґ
+edit.city=Р РµРґР°РєС‚РёСЂРѕРІР°С‚СЊ РіРѕСЂРѕРґ
+edit.country=Р РµРґР°РєС‚РёСЂРѕРІР°С‚СЊ СЃС‚СЂР°РЅСѓ
 ###################################
 #strings
 ###################################
-country=Страна
-countries=Страны
-city=Город
-capital=Столица
-cities=Города
-currency=Валюта
-id=№
-name=Название
-true=Дa
-false=Нет
-description=Описание
-abbreviation=Сокращение
-action=Действие
-is.capital=Является столицей
+country=РЎС‚СЂР°РЅР°
+countries=РЎС‚СЂР°РЅС‹
+city=Р“РѕСЂРѕРґ
+capital=РЎС‚РѕР»РёС†Р°
+cities=Р“РѕСЂРѕРґР°
+currency=Р’Р°Р»СЋС‚Р°
+id=в„–
+name=РќР°Р·РІР°РЅРёРµ
+true=Р”a
+false=РќРµС‚
+description=РћРїРёСЃР°РЅРёРµ
+abbreviation=РЎРѕРєСЂР°С‰РµРЅРёРµ (ISO)
+action=Р”РµР№СЃС‚РІРёРµ
+is.capital=РЇРІР»СЏРµС‚СЃСЏ СЃС‚РѕР»РёС†РµР№
+new.name=РќРѕРІРѕРµ РёРјСЏ
+new.description=РќРѕРІРѕРµ РѕРїРёСЃР°РЅРёРµ
 ###################################
 #buttons
 ###################################
-main.page.button=На главную
-edit.button=Редактировать
-add.button=Добавить
-delete.button=Удалить
+main.page.button=РќР° РіР»Р°РІРЅСѓСЋ
+edit.button=Р РµРґР°РєС‚РёСЂРѕРІР°С‚СЊ
+add.button=Р”РѕР±Р°РІРёС‚СЊ
+delete.button=РЈРґР°Р»РёС‚СЊ
 ###################################
 #errors
 ###################################
-name.error=Введите имя
-name.unique.error=Есть город с таким именем
-description.error=Введите описание
-error=Ошибка...Упс
+name.error=Р’РІРµРґРёС‚Рµ РёРјСЏ
+name.unique.error=Р•СЃС‚СЊ РіРѕСЂРѕРґ СЃ С‚Р°РєРёРј РёРјРµРЅРµРј
+description.error=Р’РІРµРґРёС‚Рµ РѕРїРёСЃР°РЅРёРµ
+error=РћС€РёР±РєР°...РЈРїСЃ
 ###################################
 #footer
 ###################################
