--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,7 @@
     </dependencies>
 
     <build>
+        <finalName>advisor-bot</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
