--- a/pom.xml
+++ b/pom.xml
@@ -13,13 +13,12 @@
         <version>2.4.5</version>
         <relativePath/>
     </parent>
-    <description>Demo project for Spring Boot</description>
+    <description>Telegram Bot for travelers adn webapp for bot management</description>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <start-class>com.example.advisorbot.AdvisorBotApplication</start-class>
         <java.version>11</java.version>
-        <jackson.version>2.12.3</jackson.version>
         <lombok.version>1.18.20</lombok.version>
         <tomcat.jasper.version>10.0.6</tomcat.jasper.version>
         <jstl.version>1.2</jstl.version>
@@ -79,11 +78,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mybatis</groupId>
-            <artifactId>mybatis</artifactId>
-            <version>3.4.5</version>
         </dependency>
         <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~Telegram~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
         <dependency>
