--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,11 @@ spring.messages.basename=message
 server.error.whitelabel.enabled=false
 server.error.path=/error
 ###################################
+# SECURITY
+###################################
+spring.security.user.name=traveler
+spring.security.user.password=advice
+###################################
 # DATABASE
 ###################################
 spring.datasource.driver-class-name= org.h2.Driver
@@ -25,8 +30,4 @@ spring.datasource.password=pass
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-
-
-
-
 
