--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -7,6 +7,7 @@ all.countries=Все страны
 all.cities=Все города
 new.country=Новая страна
 new.city=Новый город
+login=Вход 
 ###################################
 #headers
 ###################################
@@ -40,6 +41,7 @@ main.page.button=На главную
 edit.button=Редактировать
 add.button=Добавить
 delete.button=Удалить
+logout.button=Выйти
 ###################################
 #errors
 ###################################
