--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 # TELEGRAM BOT
 ###################################
 bot.name=AdvisorForTripBot
-bot.token=1775526071:AAHcbtpW-XfsitevyWs2Xr1RM9pypeajFZ4
+bot.token=
 ###################################
 # WEB
 ###################################
