--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,6 @@ version: '3'
 services:
   app:
     build: .
-    image: advisor-bot4
+    image: advisorfortriptelegrambot:v6
     ports:
       - 8080:8080
